<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_study" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_baseline_check_box_24"
            android:title="@string/menu_quiz" />

        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_baseline_arrow_downward_24"
            android:title="@string/menu_Update" />

    </group>

    <item android:title="Communicate">
<menu>
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/nav_rate"
        android:icon="@drawable/ic_baseline_star_rate_24"
        android:title="@string/menu_rate" />
    <item
        android:id="@+id/nav_other"
        android:icon="@drawable/ic_baseline_send_24"
        android:title="@string/menu_other" />



</menu>

    </item>
</menu>